# kovytzyhack

./: CMakeLists.txt  Dockerfile  README.en.md  README.md  app_patch.py  build.bat  gen_patch.py  pgm.cmake  pgm.lds  sources.list
.github/workflows/: main.yml
docs/: ghidra的使用教程.md  kovytzyhack编译环境搭建教程.md
src/: patch.S  xxpacth_include.h
src/game/: game_api.c  game_api.h  game_func.h  game_sound.h  game_struct.h  game_type.h  hook_BOSSHP.c  hook_init.c  pgm_key.h  ytzy_v201cn_d.rom.h  一统中原自校验.txt
src/game/font/: font.txt
src/game/hook/: hook.h  hook_basekey.c  hook_bosshpbar.c  hook_door.c  hook_screenupdate.c
src/game/include/: action.h  collision.h  input.h  obj.h  pal.h  pic.h  role.h  systbl.h
src/game/pages/: page_copyright.c  page_mainmenu.c  page_selectmode.c  page_selectrole.c  page_startgame.c  pages.h
src/game/stage/: ST0M1.c  ST1M1.c  ST1M10.c  ST1M13.c  ST1M2.c  ST1M4.c  ST1M6.c  map_kov2.c  map_kov2.h  stage.c  stage.h
src/game/table/: ScoreTbl.c
src/patch/: hook_MainInit.S  hook_bosshpbar.S  hook_door.S  hook_screenupdate.S  patch_checksum.S  patch_dropitem.S  patch_hook.S  patch_scoretable.S  patch_stagetable.S  patch_testF0.S  patch_testdoor.S
util/: kovytzy_dec.c
